# wqbkit

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
app/: config.py
app/core/: __init__.py  alpha_base_core.py  alpha_db_core.py  decorators.py  logger.py  wqb_urls.py
app/database/: __init__.py  alpha_db_manager.py  db_models.py  schemas.py
app/utils/: alpha_utils.py
modules/competitions/Osmosis/: osmosis_allocator_v3.py  osmosis_clear_v3.py  osmosis_runner_v3.py  osmosis_selector_v3.py
modules/competitions/Osmosis/1.0/: clear.py  oss2.py  xx42289.py
modules/competitions/Osmosis/document/: Osmosis Allocation Guide for Consultants New.md  Osmosis Allocation Guide for Consultants.md  【经验总结】Osmosis  OSM：根本原理、Alpha 池筛选与点数分配方法.md
modules/competitions/Osmosis/v2_0/: osmosis_allocator.py  osmosis_clear.py  osmosis_selector.py  run_allocation.py  test.ipynb
modules/competitions/Osmosis/v2_0/data/selector_cache/: candidates_ASI_any_REGULAR.pkl  candidates_EUR_any_REGULAR.pkl  candidates_EUR_any_SUPER.pkl  candidates_GLB_any_REGULAR.pkl  candidates_IND_any_REGULAR.pkl  candidates_USA_any_REGULAR.pkl  candidates_USA_any_SUPER.pkl
modules/competitions/Osmosis/v3/: build_maxtrade_mapping.py  extract_maxtrade_off.py  osmosis_allocator_v3.py  osmosis_clear_v3.py  osmosis_runner_v3.py  osmosis_selector_v3.py
modules/competitions/Osmosis/v3/data/: maxtrade_off_pending_20260511_222402.json  maxtrade_off_pending_20260511_222402.txt  maxtrade_sim_requests_EUR_20260511_222402.json  maxtrade_sim_requests_USA_20260511_222402.json  maxtrade_status.json
modules/competitions/Osmosis/v3/data/selector_cache/: blacklist.json  candidates_ASI_any_REGULAR.pkl  candidates_EUR_any_REGULAR.pkl  candidates_EUR_any_SUPER.pkl  (+4 more)
modules/competitions/Osmosis/v3/docs/: DATA_SCHEMA.md  REQUIREMENTS.md  USAGE_SELECTOR.md
modules/competitions/Osmosis/v3/json/: alpha_detail_no_os.json  alpha_detail_os.json  osmosis.json  year_status.json
modules/competitions/Osmosis/v3/notebooks/: t1.ipynb  test.ipynb
modules/competitions/Osmosis/v3/tests/: test_allocator_v3.py  test_clear_v3.py  test_runner_v3.py  test_selector_v3.py
modules/correlation/: __init__.py  alpha_calc_corr.py
modules/correlation/data/: alpha_ids.pickle  ppac_alpha_ids.pickle
modules/message/: __init__.py  alpha_message_sender.py
modules/regular_alpha/: __init__.py
modules/regular_alpha/alpha_machine/: __init__.py  alpha_generator.py  alpha_machine.py
modules/regular_alpha/alpha_machine/config/: constants.py  events.py  groups.py  operators.py
modules/regular_alpha/alpha_simulator/: __init__.py  alpha_simulator.py  neutralization.json  setting.json
modules/super_alpha/: __init__.py  alpha_dyeing.py  super_alpha_creator.py  super_alpha_simulator.py
(+189 files in other folders)
