[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wqbkit"
version = "0.4.3"
description = "WorldQuant Brain Alpha Research Automation Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Crotes", email = "Crotes@yeah.net"},
]
keywords = [
    "worldquant",
    "quantitative",
    "alpha",
    "finance",
    "trading",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "wqb",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pandas",
    "numpy",
    "scipy",
    "requests",
    "python-dotenv",
    "tqdm",
    "pytz",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "matplotlib"]

[project.urls]
Homepage = "https://github.com/Crotes/wqbkit"
Issues = "https://github.com/Crotes/wqbkit/issues"

[tool.hatch.build.targets.wheel]
force-include = {"__init__.py" = "wqbkit/__init__.py", "app" = "wqbkit/app", "modules" = "wqbkit/modules"}

